fix: remove horizontal scroll

--- a/src/components/view/pages/main/mainPage.scss
+++ b/src/components/view/pages/main/mainPage.scss
@@ -1,8 +1,6 @@
 .page__container {
-/*   display: grid;
-  grid-template-columns: 3fr 1fr; */
   display: flex;
   height: 100%;
-  width: 100%;
+  width: 98%;
   padding: 2%;
 }
